Fix loading port numbers from file on Windows
File not found error for files like file://c:/names1.txt